Adds better demo text

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Capture Capturer</title>
+        <title>The Capturer</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%22-5%22 y=%2280%22 font-size=%2280%22>🖥️</text></svg>">
         <link rel="stylesheet" href="./index.scss">
 
         <meta charset="utf-8">
-        <meta name="description" content="Return only the values in regex capture groups.">
+        <meta name="description" content="Return only the values found in regex capture groups.">
         <meta name="author" content="me@meandmybadself.com">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,11 +15,11 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="format-detection" content="telephone=no">
 
-        <meta property="og:title" content="Capture Capturer">
-        <meta property="og:description" content="Return only the values in regex capture groups.">
+        <meta property="og:title" content="The Capturer">
+        <meta property="og:description" content="Return only the values found in regex capture groups.">
 
-        <meta name="twitter:title" content="Capture Capturer">
-        <meta name="twitter:description" content="Return only the values in regex capture groups.">
+        <meta name="twitter:title" content="The Capturer">
+        <meta name="twitter:description" content="Return only the values found in regex capture groups.">
 
     </head>
     <body>
