--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>The Capturer</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%22-5%22 y=%2280%22 font-size=%2280%22>🖥️</text></svg>">
-        <link rel="stylesheet" href="./index.scss">
 
         <meta charset="utf-8">
         <meta name="description" content="Return only the values found in regex capture groups.">
@@ -24,6 +23,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="./index.tsx"></script>
+        <script type="module" src="/src/index.tsx"></script>
     </body>
 </html>
